force-app/main/default/objects/Expense_Management__c/Expense_Management__c.object-meta.xml
<CustomObject>
    <label>Expense Management</label>
    <nameField>
        <label>Expense Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>