force-app/main/default/objects/Expense_Management__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>