force-app/main/default/objects/Expense_Management__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expense Managements</relationshipLabel>
    <relationshipName>Expense_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>