force-app/main/default/objects/Expense_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Date__c</columns>
    <columns>Expense_Type__c</columns>
    <columns>School__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>